# Visual-servo-kalman

./: README.md
chess/: CMakeLists.txt  package.xml
chess/launch/: display.launch  gazebo.launch
chess/meshes/: base_link.STL  black_Link.STL
chess/urdf/: chess.csv  chess.urdf
ur_chessboard/ur10_moveit_config/: package.xml
ur_chessboard/ur10_moveit_config/config/: ompl_planning.yaml  ur10.srdf
ur_chessboard/ur10_moveit_config/launch/: chomp_planning_pipeline.launch.xml  gazebo.launch  moveit.rviz  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
ur_chessboard/ur_description/urdf/: ur10_robot.urdf.xacro
ur_chessboard/ur_gazebo/launch/: test.launch  ur10.launch  ur10_chessboard.launch  ur5.launch
ur_chessboard/ur_gazebo/urdf_camera/: yixiuge_d435i.xacro  yixiuge_d435i_gazebo.xacro
visual_servo_kalman/: CMakeLists.txt  package.xml
visual_servo_kalman/goal/: frame.txt
visual_servo_kalman/include/: controller_kalman_6dof.h  image_processor.h  kalman.h  robot.h
visual_servo_kalman/src/: controller_kalman_6dof.cpp  kalman.cpp  kalman_6dof.cpp  setgoal.cpp
visual_servo_kalman/src/lib/: image_processor.cpp  robot.cpp
